--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,17 @@ dependencies:
   http: ^1.2.1
   intl: ^0.19.0
   flutter_bloc: ^8.1.6
+  url_launcher: ^6.3.0
+  injectable: ^2.4.2
+  get_it:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # add the generator to your dev_dependencies
+  injectable_generator:
+  # add build runner if not already added
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
